; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-ar2315.c_ar2315_pci_local_cfg_rd.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-ar2315.c_ar2315_pci_local_cfg_rd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar2315_pci_ctrl = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ar2315_pci_ctrl*, i32, i32, i32*)* @ar2315_pci_local_cfg_rd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar2315_pci_local_cfg_rd(%struct.ar2315_pci_ctrl* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.ar2315_pci_ctrl*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.ar2315_pci_ctrl* %0, %struct.ar2315_pci_ctrl** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load %struct.ar2315_pci_ctrl*, %struct.ar2315_pci_ctrl** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @ar2315_pci_cfg_access(%struct.ar2315_pci_ctrl* %9, i32 %10, i32 %11, i32 4, i32* %12, i32 0)
  ret i32 %13
}

declare dso_local i32 @ar2315_pci_cfg_access(%struct.ar2315_pci_ctrl*, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
